# taiwan-id

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  Setup.hs  Taiwan-ID-CharIndex.html  Taiwan-ID-CharSet.html  Taiwan-ID-Digit.html  Taiwan-ID-Digit1289.html  Taiwan-ID-Gender.html  Taiwan-ID-Issuer.html  Taiwan-ID-Language.html  Taiwan-ID-Letter.html  Taiwan-ID-Location.html  Taiwan-ID-Nationality.html  Taiwan-ID-Region.html  Taiwan-ID.html  cabal.project  doc-index.html  index.html  taiwan-id.cabal  taiwan-id.haddock
.github/workflows/: build.yml
components/exe/taiwan-id/: Main.hs
components/lib/taiwan-id-cli/Taiwan/ID/: CLI.hs
components/lib/taiwan-id-test-common/Taiwan/ID/: Test.hs
components/lib/taiwan-id/Taiwan/ID/: CharIndex.hs  Digit1289.hs  Language.hs  Region.hs  Unchecked.hs  Utilities.hs
components/taiwan-id-cli-exe/: Main.hs
components/taiwan-id-cli-lib/Taiwan/ID/: CLI.hs
components/taiwan-id-test/: Spec.hs
components/taiwan-id/Taiwan/: ID.hs
components/taiwan-id/Taiwan/ID/: CharSet.hs  Digit.hs  Gender.hs  Issuer.hs  Language.hs  Letter.hs  Location.hs  Nationality.hs  Region.hs  Unchecked.hs
components/test/taiwan-id-cli-test/: Main.hs  Spec.hs
components/test/taiwan-id-doc-test/: Main.hs
components/test/taiwan-id-test/: Main.hs  Spec.hs
data/taiwan-id-cli-test/decode/: 000.golden  001.golden  002.golden  003.golden  004.golden  005.golden  006.golden  007.golden  008.golden  009.golden  010.golden  011.golden  013.golden  014.golden  015.golden  016.golden  017.golden  018.golden  019.golden  020.golden  021.golden  022.golden  023.golden  024.golden  025.golden  026.golden  027.golden  028.golden  029.golden  030.golden  031.golden  032.golden  033.golden  034.golden  035.golden  036.golden  037.golden  038.golden  039.golden  040.golden  (+956 more)
data/taiwan-id-cli-test/generate/: 000.golden  001.golden  002.golden  004.golden  005.golden  006.golden  007.golden  008.golden  009.golden  010.golden  011.golden  012.golden  013.golden  014.golden  015.golden  016.golden  017.golden  018.golden  020.golden  021.golden  022.golden  023.golden  024.golden  025.golden  027.golden  030.golden  033.golden  034.golden  035.golden  036.golden  038.golden  039.golden  040.golden  041.golden  042.golden  044.golden  045.golden  047.golden  049.golden  050.golden  (+712 more)
data/taiwan-id-cli-test/validate/: 000.golden  001.golden  002.golden  003.golden  004.golden  005.golden  006.golden  007.golden  008.golden  009.golden  010.golden  011.golden  012.golden  013.golden  014.golden  015.golden  016.golden  017.golden  019.golden  020.golden  021.golden  022.golden  023.golden  024.golden  025.golden  026.golden  027.golden  028.golden  029.golden  030.golden  031.golden  032.golden  033.golden  034.golden  035.golden  036.golden  037.golden  038.golden  039.golden  040.golden  (+938 more)
src/: Taiwan.ID.CharIndex.html  Taiwan.ID.CharSet.html  Taiwan.ID.Digit.html  Taiwan.ID.Digit1289.html  Taiwan.ID.Gender.html  Taiwan.ID.Issuer.html  Taiwan.ID.Language.html  Taiwan.ID.Letter.html  Taiwan.ID.Location.html  Taiwan.ID.Nationality.html  Taiwan.ID.Region.html  Taiwan.ID.Unchecked.html  Taiwan.ID.Utilities.html  Taiwan.ID.html
